# sqlp

./: .gitignore  README.md  flake.nix  pyproject.toml
src/sqlp/: __init__.py  executor.py  pool.py  schema.py  snapshot.py  sql.py  table.py  types.py
src/sqlp/tests/: test_executor.py  test_mutations.py  test_pool.py  test_table.py
tests/: test_executor.py  test_mutations.py  test_pool.py  test_schema.py  test_snapshot.py  test_sql.py  test_table.py  test_types.py
