[build-system]
requires = ["uv_build>=0.9.17,<0.10.0"]
build-backend = "uv_build"

[project]
name = "sqlp"
version = "0.1.0"
description = "Async-first, Pythonic ORM with Pydantic integration and Drizzle-like API"
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }
authors = [{ name = "uzaaft", email = "git@uzaaft.me" }]

dependencies = [
    "pydantic>=2.0",
    "asyncpg>=0.30",
    "aiosqlite>=0.20",
    "aiomysql>=0.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "mypy>=1.8",
    "ruff>=0.3",
]

[tool.sqlp]
schema_snapshot_path = ".sqlp/schema.json"
